adding appendix lessons on complex numbers and Fourier transforms

--- a/autocorrelation.Rmd
+++ b/autocorrelation.Rmd
@@ -1,5 +1,6 @@
-# Autocorrelation Function {#autocorrelation}
+# (PART) Random Signal Processing {-}
 
+# Autocorrelation Function {#autocorrelation}
 
 ## Theory {-}
 
