--- a/fourier.Rmd
+++ b/fourier.Rmd
@@ -11,7 +11,9 @@ G(f) \overset{\text{def}}{=} \int_{-\infty}^\infty g(t)e^{-j2\pi f t}\,dt.
 Notice that it is a function of frequency $f$, rather than time $t$. Notice also that it is complex-valued, 
 since its definition involves the imaginary number $j \overset{\text{def}}{=} \sqrt{-1}$.
 
-The following video explains the visual intuition behind the Fourier transform.
+The following video explains the visual intuition behind the Fourier transform. Note that this video 
+uses $i$ to denote the imaginary number $\sqrt{-1}$, whereas we use $j$ (which is common in electrical engineering, 
+to avoid confusion with current).
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/spUNpyF58BY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -44,8 +46,8 @@ using Theorem \@ref(thm:calculating-magnitude).
 &= \sqrt{\frac{4}{1 + (2\pi \frac{f}{20})^2}}
 \end{align*}
 
-Now, the _magnitude_ of the Fourier transform is a function we can easily visualize. This signal 
-has more low-frequency content than high-frequency content.
+Now, the _magnitude_ of the Fourier transform is a function we can easily visualize. 
+From the graph, we see that the signal has more low-frequency content than high-frequency content.
 ```
 
 ```{r, echo=FALSE, fig.show = "hold", fig.align = "default"}
@@ -59,13 +61,75 @@ axis(2, pos=0, at=(0:4) / 2)
 
 ## Discrete-Time Fourier Transforms {-}
 
-- Aliasing, Nyquist limit
-- Discrete-Time Fourier Transform
+Discrete-time signals are obtained by sampling a continuous-time signal 
+at regular time intervals. The sampling rate $f_s$ (in Hz) specifies the 
+number of samples per second. The signal below is sampled at a rate of 
+$f_s = 16$ Hz.
+
+```{r, echo=FALSE, fig.show = "hold", fig.align = "default"}
+ts <- seq(0, 1, .001)
+plot(ts, sin(2 * pi * 4 * ts) + sin(2 * pi * 6 * ts), type="l",
+     xlab="Time (seconds)", ylab="Amplitude")
+
+ts <- seq(0, 1, length.out=17)
+points(ts, sin(2 * pi * 4 * ts) + sin(2 * pi * 6 * ts), pch=19)
+```
+
+We write $x[n] = x(t_n)$ for the $n$th time sample, where $t_n = \frac{n}{f_s}$.
+
+It's possible to choose a sampling rate $f_s$ that is too low. In the graph below, 
+the underlying continuous-time signal (in black) is a sinusoid with a frequency of 14 Hz. 
+However, because the discrete-time signal (in red) was sampled at a rate of 16 Hz, the 
+sinusoid appears to have a frequency of 2 Hz.
+
+```{r, echo=FALSE, fig.show = "hold", fig.align = "default"}
+ts <- seq(0, 1, .001)
+plot(ts, sin(2 * pi * 14 * ts), type="l", col="black",
+     xlab="Time (seconds)", ylab="Amplitude")
+lines(ts, -sin(2 * pi * 2 * ts), col="red")
+
+ts <- seq(0, 1, length.out=17)
+points(ts, sin(2 * pi * 14 * ts), pch=19, col="red")
+```
+
+We say that the higher frequency is **aliased** by the lower one.
+
+At a sampling rate of $f_s$, any frequencies outside the range
+\[ (-f_s / 2, f_s / 2) \]
+will be aliased by a frequency inside this range. This "maximum frequency" 
+of $f_s / 2$ is known as the **Nyquist limit**.
+	
+Therefore, the Fourier transform of a discrete-time signal is effectively only 
+	defined for frequencies from $-f_s/2$ to $f_s/2$. Contrast this with the Fourier transform of a 
+	continuous-time signal, which is defined on all frequencies from $-\infty$ to $\infty$.
+	
+When calculating the Fourier transform of a discrete-time signal, we typically work with 
+_normalized_ frequencies. That is, the frequencies are in units of "cycles per _sample_" instead of 
+"cycles per _second_". (Another way to think about this is that we assume all discrete-time signals are 
+sampled at 1 Hz.) As a result, the Nyquist limit is $1/2$, so the **Discrete-Time Fourier Transform** 
+is defined only for $|f| < 0.5$.
+
+\begin{align}
+G(f) &\overset{\text{def}}{=} \sum_{n=-\infty}^\infty g[n] e^{-j2\pi f t}\,dt & -0.5 < f < 0.5
+(\#eq:discrete-fourier)
+\end{align}
+
+To calculate the Fourier transform of a signal, we will rarely use \@ref(eq:discrete-fourier). Instead, we will 
+look up the Fourier transform of the signal in a table like Appendix \@ref(dtft) and use properties of the 
+Fourier transform (as shown in Appendix \@ref(fourier-properties)).
 
 
 ## Essential Practice {-}
 
-1. Which of the following terms fill in the blank? The Fourier transform $G(f)$ of a real-valued time signal $g(t)$ 
+1. Calculate the Fourier transform $G(f)$ of the continuous-time signal 
+\[ g(t) = \begin{cases} 1/3 & 0 < t < 3 \\ 0 & \text{otherwise} \end{cases}.  \]
+Graph its magnitude $|G(f)|$ as a function of frequency.
+
+2. Calculate the Fourier transform $G(f)$ of the discrete-time signal 
+\[ g[n] = \delta[n] + 0.4 \delta[n-1] + 0.4 \delta[n+1]. \]
+Graph $G(f)$. (The Fourier transform should be a real-valued function, so you do not need to take its magnitude.)
+
+3. Which of the following terms fill in the blank? The Fourier transform $G(f)$ of a real-valued time signal $g(t)$ 
 is necessarily ....
 
     a. real-valued: $G(f) \in \mathbb{R}$
@@ -77,7 +141,7 @@ is necessarily ....
     use Euler's formula, and simplify. Use the fact that 
     $\cos(-\theta) = \cos(\theta)$ and $\sin(-\theta) = -\sin(\theta)$.)
 
-2. Which of the following terms fill in the blank? The Fourier transform $G(f)$ of a real-valued and symmetric 
+4. Which of the following terms fill in the blank? The Fourier transform $G(f)$ of a real-valued and symmetric 
 time signal $g(t)$ is necessarily ....
 
     a. real-valued: $G(f) \in \mathbb{R}$
