--- a/complex.Rmd
+++ b/complex.Rmd
@@ -2,7 +2,9 @@
 
 ## Motivation {-}
 
-The following videos explain why imaginary numbers are _necessary_ in mathematics.
+The following videos explain why imaginary numbers are _necessary_ in mathematics. Note that these videos 
+use $i$ to denote the imaginary number $\sqrt{-1}$, whereas we use $j$ (which is common in electrical engineering, 
+to avoid confusion with current).
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/T647CGsuOVU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
@@ -23,10 +25,10 @@ complex addition and multiplication.
 
 Be sure to try the calculations suggested at the end of the previous video before moving on to the next video:
 
-- $(4 + 3i) \cdot i$
-- $(4 + 3i) \cdot 2i$
-- $(4 + 3i) \cdot (4 + 3i)$
-- $(2 + i) \cdot (1 + 2i)$
+- $(4 + 3j) \cdot j$
+- $(4 + 3j) \cdot 2j$
+- $(4 + 3j) \cdot (4 + 3j)$
+- $(2 + j) \cdot (1 + 2j)$
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/YHvR8siIiD0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
