--- a/psd.Rmd
+++ b/psd.Rmd
@@ -178,6 +178,6 @@ sample?
 \[ X(t) = \cos(2\pi f t + \Theta). \]
 Calculate the PSD of $\{ X(t) \}$.
 
-4. Let $\{ X(t) \}$ be a random process with mean function 
+4. Let $\{ X(t) \}$ be a continuous-time random process with mean function 
 $\mu_X(t) = -1$ and autocovariance function $C_X(s, t) = 2e^{-|s - t|/3}$. 
 Calculate the PSD of $\{ X(t) \}$. What is the expected power below 3 Hz?
