--- a/lti-frequency.Rmd
+++ b/lti-frequency.Rmd
@@ -35,7 +35,7 @@ The second-to-last equality follows from the fact that the convolution of any fu
 and convolving this constant function with $h(-t)$ gives another factor of $\int_{-\infty}^\infty h(t)\,dt$.
 
 Now, we know that $S_Y$, the power spectral density of $\{ Y(t) \}$, is just the Fourier transform of the 
-autocorrelation function $R_Y$. Combining the representation of $R_Y$ above, with the Fourier properties from 
+autocorrelation function $R_Y$. Combining the representation of $R_Y$ above with the Fourier properties from 
 Appendix \@ref(fourier-properties), we obtain:
 \begin{align*}
 S_Y(f) &= \mathscr{F}[R_Y](f) \\
@@ -59,7 +59,9 @@ We showed in Example \@ref(exm:white-noise-psd) that its PSD is
 Let's pass $\{ Z[n] \}$ through a filter with impulse response 
 \[ h[n] = (-0.4)^n u[n]. \]
 What is the PSD of the output $\{ Y[n] \}$?
+```
 
+```{solution}
 By the Filter Theorem (Theorem \@ref(thm:filter-theorem)), we know that 
 \[ S_Y(f) = |H(f)|^2 \cdot S_Z(f). \]
 So all we need to do is find $|H(f)|^2$.
@@ -142,9 +144,10 @@ Now, suppose we pass $\{ X(t) \}$ through an LTI filter with impulse response
 \[ h(t) = 1.8\text{sinc}(1.2t). \]
 Using the table in Appendix \@ref(ctft), along with the scaling property, we see that the frequency response is 
 \[ H(f) = 1.8\frac{1}{1.2} \text{rect}(\frac{f}{1.2}) = \begin{cases} 1.5 & |f| < 0.6 \\ 0 & \text{otherwise} \end{cases}. \]
-The filter $h$ is a ideal lowpass filter because it perfectly preserves frequencies below $0.6$ Hz and 
-perfectly removes frequencies above $0.6$ Hz. It is "ideal" because the impulse response $h(t)$ is 
-not implementable.
+The filter $h$ is an ideal lowpass filter because it perfectly passes frequencies below $0.6$ Hz and 
+perfectly rejects frequencies above $0.6$ Hz. It is "ideal" because the impulse response $h(t)$ is 
+not implementable in practice. (The $\text{sinc}$ function extends 
+infinitely far into the past and into the future.)
 
 Now, we have to calculate the _squared_ magnitude of the impulse response for the filter theorem:
 \[ |H(f)|^2 = \begin{cases} 1.5^2 & |f| < 0.6 \\ 0 & \text{otherwise} \end{cases}. \]
@@ -170,8 +173,8 @@ lines(c(-2, -.6, -.6, .6, .6, 2), c(0, 0, 1.5^2, 1.5^2, 0, 0), lwd=2, col="blue"
 
 By the Filter Theorem (Theorem \@ref(thm:filter-theorem)), the PSD of the output is 
 \[ S_Y(f) = |H(f)|^2 \cdot S_X(f) = \begin{cases} 1.5^2 \cdot 5 \sqrt{\frac{\pi}{3}} e^{-\pi^2 f^2 / 3}  + 1.5^2 \cdot 4 \delta(f) & |f| < 0.6 \\ 0 & \text{otherwise} \end{cases} \]
-Although the formula for $S_Y(f)$ is messy, it is quite straightforward to understand what is going on if we just 
-graph it.
+The formula for $S_Y(f)$ is quite messy; it is easier to understand what is going on by just graphing 
+the function.
 
 ```{r, echo=FALSE, fig.show = "hold", fig.align = "default"}
 plot(0, 1.5^2 * 4,
@@ -191,10 +194,11 @@ lines(c(0, 0), c(0, 1.5^2 * 4), lwd=2, col="orange")
 ```
 
 Frequencies below 0.6 Hz are passed (with a gain of $1.5^2 = 2.25$), while 
-frequencies above 0.6 Hz are rejected completely.
+frequencies above 0.6 Hz are rejected.
 
 The Filter Theorem allows us to prove a fact about power spectral densities that we have 
-assumed until now.
+assumed in many of our calculations. Combined with Theorem \@ref(thm:psd-power), the next 
+theorem justifies the name "power spectral density" for $S_X(f)$.
 
 ```{theorem psd-band-integral, name="Expected Power in a Frequency Band"}
 The integral of the PSD $S_X(f)$ over any frequency band $a < |f| < b$ equals the expected power 
@@ -226,21 +230,22 @@ in that frequency band.
 ```
 
 ```{proof}
-To calculate the expected power in a signal $\{ X(t) \}$ over the frequency band $a < |f| < b$, 
+To measure the expected power in a signal $\{ X(t) \}$ over the frequency band $a < |f| < b$, 
 we imagine passing $\{ X(t) \}$ through the ideal bandpass filter 
 \[ H(f) = \begin{cases} 1 & a < |f| < b \\ 0 & \text{otherwise} \end{cases}. \]
-The output signal $\{ Y(t) \}$ is then just a version of $\{ X(t) \}$, with all frequency content 
+The output signal $\{ Y(t) \}$ is then just $\{ X(t) \}$ with frequency content 
 outside $a < |f| < b$ removed.
 
-To obtain the expected power in this frequency band, we integrate the PSD $S_Y(f)$ of the output over all frequencies. 
-For continuous-time signals, this looks like  
+Now, to obtain the expected power in $\{ X(t) \}$ this frequency band, we can integrate the PSD of 
+$\{ Y(t) \}$ over all frequencies (by Theorem \@ref(thm:psd-integral)):
 \[ \text{Expected power between $a$ and $b$} = \int_{-\infty}^\infty S_Y(f)\,df. \]
-(For discrete-time signals, the limits of the integral are $-0.5$ and $0.5$.)
+(This is for a continuous-time process. For a discrete-time process, 
+  the limits of the integral would be $-0.5$ to $0.5$.)
 
 But by the Filter Theorem (Theorem \@ref(thm:filter-theorem)), we have 
 \[ \int_{-\infty}^\infty S_Y(f)\,df = \int_{-\infty}^\infty |H(f)|^2 S_X(f)\,df = \int_{a < |f| < b} S_X(f)\,df, \]
-since $|H(f)|^2$ is 0 outside $a < |f| < b$. This shows that we can obtain the expected power over any frequency 
-band by integrating the PSD over the appropriate frequencies.
+since $|H(f)|^2$ is 0 outside $a < |f| < b$. This shows that we can obtain the expected power in $\{X(t)\} 
+over any frequency band by integrating its PSD $S_X(f)$ over the appropriate frequencies.
 ```
 
 ## Essential Practice {-}
